[package]
name = "my-grep"
version = "0.1.0"
authors = ["finnkauski <iwiivi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rayon = "*" The operations are too fast so really it just adds overhead

[profile.release]
debug = true
